# Lang

./: .gitignore  README.md  app.json  fix-colors.js  nx.json  package-lock.json  package.json  vite.config.js  vite.config.ts  webpack.config.js  workspace.json  z
.expo/types/: router.d.ts
.nx/workspace-data/: eslint-2654242865465226088.hash  expo-15269822403136162141.hash  file-map.json  jest-7930610538513362720.hash  lockfile.hash  nx_files.nxt  parsed-lock-file.json  playwright-5186013267177752385.hash  project-graph.json  source-maps.json  vite-9347777721732807074.hash
.nx/workspace-data/d/: server-process.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
app/: _layout.tsx
app/api/src/: app.service.ts
app/desktop/: index.html  main.js
app/desktop-e2e/: playwright.config.ts
app/desktop/src/: App.tsx  index.html  main.ts
app/desktop/src/app/: app.spec.tsx
app/desktop/src/styles/: App.scss  main.scss
app/mobile/: App.tsx
app/tests/: playwright.config.ts
app/web/: App.tsx  _layout.tsx  app.config.js  eslint.config.mjs  index.css  index.html  index.tsx  metro.config.js  project.json
app/web/src/: App.tsx  index.css  main.tsx  simple-styles.css  theme.ts  types.ts
app/web/src/app/: App.tsx
app/web/src/components/: SearchBar.tsx  SearchResults.tsx
app/web/src/context/: AppContext.tsx
app/web/src/pages/: SettingsPage.tsx
app/web/src/services/: IchiMoeService.ts  TranslationService.ts
app/web/src/styles/: main.scss
app/web/src/types/: index.ts  navigation.ts
apps/Lang/: app.json  eslint.config.mjs  jest.config.ts  package.json
apps/Lang-e2e/: project.json
apps/Lang/src/: App.tsx
apps/Lang/src/components/: Translator.tsx
apps/Lang/src/pages/: SearchPage.tsx
apps/desktop/: index.html  package.json
apps/desktop/src/app/: app.tsx
apps/mobile/: app.config.ts
apps/mobile/src/: App.tsx
apps/web/: app.config.js  build-simple.js  build-web.js  build.js  index.html  metro.config.js  project.json  tsconfig.app.json  vite.config.ts
apps/web/apps/desktop/: package-lock.json  package.json
apps/web/simple-app/: 404.html  index.html  serve.js
apps/web/src/: App.tsx  main-simple.tsx  main.tsx  types.ts
ios/: Podfile
ios/ysource/: Info.plist
ios/ysource.xcodeproj/: project.pbxproj
src/: App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+68 files in other folders)
